(major): compatibility with new game system